Fixed code block overflow issue in Chrome

--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -4,7 +4,7 @@ code {
     padding: 3px;
     display: inline-block;
     max-width: 100%;
-    word-wrap: anywhere;
+    word-break: break-all;
     white-space: break-spaces;
 }
 
