--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -53,15 +53,6 @@
             }
         }
     }
-    code {
-        background: #333;
-        color: white;
-        padding: 3px;
-        display: inline-block;
-        max-width: 100%;
-        word-wrap: anywhere;
-        white-space: break-spaces;
-    }
     img {
         text-align: center;
         width: 100%;
